PR/11228: Ben Harris: Unexpand -t should take tab list. Based on patch supplied by Roy Marples.